@@ -10,6 +10,13 @@
   <articleinfo>
     <title>Gnome Display Manager Reference Manual</title>
 
+    <revhistory>
+      <revision>
+        <revnumber>0.0</revnumber>
+        <date>2006-12</date>
+      </revision>
+    </revhistory>
+
     <abstract role="description">
       <para>
         GDM is the GNOME Display Manager, a graphical login program.
