@@ -1,10 +1,16 @@
-2006-12-27  Lukasz Zalewski  <lukas@dcs.qmul.ac.uk>
+2006-12-29  Brian Cameron  <Brian.Cameron@sun.com>
+
+	* Patch to add revnumber and date to GDM docs.  Patch by 
+	  Paul <ephraim_owns@hotmail.com>.  Helps to fix bug
+	  #389931.
+
+2006-12-29  Lukasz Zalewski  <lukas@dcs.qmul.ac.uk>
 	
 	* gui/gdmsetup.c: Fixed minor bug which allowed users
 	  with uid lower than minimalUID to be added to the include
 	  list, by adding them to the include list (not applying the
 	  changes yet), changing the value of the minmalUID and then 
-	  applying changes.
+	  applying changes.  Fixes bug #390147.
 	* gui/gdmsetup.c: Fix some memory leaks.
 	  
 2006-12-29  Brian Cameron  <brian.cameron@sun.com>
